app/css/directives/newsfeed.less
//
// Copyright 2015 Next Century Corporation
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

.newsfeed-directive {
    height: @widget-height;
    width: @widget-width;
    padding: 10px;

    .newsfeed {
        overflow: auto;
    }

    .item {
        color: @mid-text-color;
        font-size: 13px;
        background-color: @light-background;
        border: @main-border;
        border-top: 0px;
        -moz-box-sizing: border-box;
        box-sizing: border-box;
        padding: 10px;

        &:first-child {
            border: @main-border;
        }

        &.future {
            background-color: @main-background;
            font-style: italic;
        }

        &.highlight {
            background-color: #ffff66;
        }

        img {
            margin-right: 5px;
        }

        .vertical-align {
            position: relative;
            top: 2px;
        }

        .head {
            font-size: 15px;
            font-weight: bold;
            color: @main-text-color;
        }

        .name {
            color: @main-text-color;
            font-size: 15px;
        }

        .date {
            color: @main-text-color;
        }

        .text {
            word-wrap: break-word;
        }

        .glyphicon {
            color: #333;
            font-size: 12px;
        }
    }

    .translate {
        .input-group-btn {
            width: auto;
        }
    }
}

